--- a/buildbot/files/master.cfg
+++ b/buildbot/files/master.cfg
@@ -29,7 +29,7 @@ c['slavePortnum'] = 9989
 from buildbot.changes.gitpoller import GitPoller
 c['change_source'] = []
 c['change_source'].append(GitPoller(
-        'git://github.com/buildbot/pyflakes.git',
+        'git@github.com:Adcade/product2.git',
         workdir='gitpoller-workdir', branch='master',
         pollinterval=300))
 
@@ -62,10 +62,30 @@ from buildbot.steps.source.git import Git
 from buildbot.steps.shell import ShellCommand
 
 factory = BuildFactory()
+
 # check out the source
-factory.addStep(Git(repourl='git://github.com/buildbot/pyflakes.git', mode='incremental'))
-# run the tests (note that this will require that 'trial' is installed)
-factory.addStep(ShellCommand(command=["trial", "pyflakes"]))
+factory.addStep(Git(repourl='https://github.com/adcade/product2.git',
+  workdir='/home/buildbot/slave/runtests/build/product2',
+    mode='incremental',
+      branch='master',
+        haltOnFailure=True
+        ))
+
+# install node
+factory.addStep(ShellCommand(
+  command=['nvm', 'install', '0.10.28'],
+    workdir='/home/buildbot/slave/runtests/build/product2'
+    ))
+# install node dependencies
+factory.addStep(ShellCommand(
+  command=['npm', 'install'],
+    workdir='/home/buildbot/slave/runtests/build/product2'
+    ))
+# run the tests (note that this will require that 'karma' is installed)
+factory.addStep(ShellCommand(
+  command=['karma', 'start', 'karma.conf.js', '--single-run'],
+  workdir='/home/buildbot/slave/runtests/build/product2'
+))
 
 from buildbot.config import BuilderConfig
 
@@ -89,7 +109,7 @@ from buildbot.status.web import authz, auth
 authz_cfg=authz.Authz(
     # change any of these to True to enable; see the manual for more
     # options
-    auth=auth.BasicAuth([("pyflakes","pyflakes")]),
+    auth=auth.BasicAuth([("adcade","adcade")]),
     gracefulShutdown = False,
     forceBuild = 'auth', # use this to test your slave once it is set up
     forceAllBuilds = False,
@@ -106,8 +126,8 @@ c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg))
 # installation's html.WebStatus home page (linked to the
 # 'titleURL') and is embedded in the title of the waterfall HTML page.
 
-c['title'] = "Pyflakes"
-c['titleURL'] = "https://launchpad.net/pyflakes"
+c['title'] = "Adcade"
+c['titleURL'] = "http://www.adcade.com"
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server (usually the html.WebStatus page) is visible. This
