Added include statement for nvm

--- a/buildbot/files/master.cfg
+++ b/buildbot/files/master.cfg
@@ -29,7 +29,7 @@ c['slavePortnum'] = 9989
 from buildbot.changes.gitpoller import GitPoller
 c['change_source'] = []
 c['change_source'].append(GitPoller(
-        'git@github.com:Adcade/product2.git',
+        'git@github.com:roblayton/buildbot-test.git',
         workdir='gitpoller-workdir', branch='master',
         pollinterval=300))
 
@@ -64,8 +64,8 @@ from buildbot.steps.shell import ShellCommand
 factory = BuildFactory()
 
 # check out the source
-factory.addStep(Git(repourl='https://github.com/adcade/product2.git',
-  workdir='/home/buildbot/slave/runtests/build/product2',
+factory.addStep(Git(repourl='https://github.com/roblayton/buildbot-test.git',
+  workdir='/home/buildbot/slave/runtests/build/buildbot-test',
     mode='incremental',
       branch='master',
         haltOnFailure=True
@@ -74,17 +74,17 @@ factory.addStep(Git(repourl='https://github.com/adcade/product2.git',
 # install node
 factory.addStep(ShellCommand(
   command=['nvm', 'install', '0.10.28'],
-    workdir='/home/buildbot/slave/runtests/build/product2'
+    workdir='/home/buildbot/slave/runtests/build/buildbot-test'
     ))
 # install node dependencies
 factory.addStep(ShellCommand(
   command=['npm', 'install'],
-    workdir='/home/buildbot/slave/runtests/build/product2'
+    workdir='/home/buildbot/slave/runtests/build/buildbot-test'
     ))
 # run the tests (note that this will require that 'karma' is installed)
 factory.addStep(ShellCommand(
   command=['karma', 'start', 'karma.conf.js', '--single-run'],
-  workdir='/home/buildbot/slave/runtests/build/product2'
+  workdir='/home/buildbot/slave/runtests/build/buildbot-test'
 ))
 
 from buildbot.config import BuilderConfig
