--- a/buildbot/files/master.cfg
+++ b/buildbot/files/master.cfg
@@ -71,6 +71,12 @@ factory.addStep(Git(repourl='https://github.com/roblayton/buildbot-test.git',
         haltOnFailure=True
         ))
 
+# source nvm wtf
+factory.addStep(ShellCommand(
+  command=['.', '/opt/nvm/nvm.sh'],
+      workdir='/home/buildbot/slave/runtests/build/buildbot-test'
+      ))
+
 # install node
 factory.addStep(ShellCommand(
   command=['nvm', 'install', '0.10.28'],
